# agent-fleet

./: .dockerignore  .env.docker  .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  alembic.ini  approach-comparison.html  conftest.py  docker-compose.yml  pyproject.toml  setup.sh
alembic/: env.py
alembic/versions/: b6e2dee3d7c1_initial_schema.py
cli/: __init__.py  main.py
config/agents/: architect.yaml  backend-dev.yaml  compliance-checker.yaml  dba.yaml  frontend-dev.yaml  impact-analyzer.yaml  integrator.yaml  reviewer.yaml  security-reviewer.yaml  tester.yaml
config/workflows/: banking-emergency.yaml  banking-schema-change.yaml  banking-standard.yaml  default.yaml  two-stage.yaml
design-system/agent-fleet/: MASTER.md
docs/: admin.md  agents.md  api.md  architecture.md  chat.md  cli.md  contributing.md  docker.md  onboarding.md  security.md  setup.md  ui.md  user-guide.md  workflows.md
fleet-ui/: .dockerignore  .env.playwright  Dockerfile  index.html  nginx.conf  package-lock.json  package.json  playwright.config.ts
fleet-ui/e2e/: global-setup.ts
fleet-ui/src/: App.css  App.tsx  theme.ts
scripts/: seed_supabase.py
src/agent_fleet/: __init__.py  exceptions.py  main.py
supabase/: config.toml
supabase/migrations/: 001_initial_schema.sql  003_projects_table.sql  20260313000001_fix_triggers.sql  20260316150748_chat_tables.sql  20260316204756_api_keys.sql  20260316234005_audit_log.sql  20260330000000_add_project_id_to_tasks.sql
tests/integration/: test_e2e_pipeline.py  test_e2e_smoke.py  test_parallel_stages.py  (+1 more)
tests/unit/: test_cli.py  (+40 more)
(+104 files in other folders)
