[project]
name = "agent-fleet"
version = "0.1.0"
description = "Multi-model AI agent orchestration platform"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "litellm>=1.55.0",
    "langgraph>=0.4.0",
    "langchain-core>=0.3.0",
    "typer>=0.15.0",
    "sqlalchemy>=2.0.0",
    "alembic>=1.14.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.7.0",
    "structlog>=24.4.0",
    "pyyaml>=6.0",
    "gitpython>=3.1.0",
    "httpx>=0.28.0",
    "aiosqlite>=0.20.0",
    "supabase>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
    "types-PyYAML>=6.0",
]
browser = [
    "playwright>=1.49.0",
]

[project.scripts]
fleet = "cli.main:app"

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
norecursedirs = ["tests/fixtures"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true

[tool.coverage.run]
source = ["src/agent_fleet"]

[tool.coverage.report]
fail_under = 80

[build-system]
requires = ["setuptools>=70.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src", "."]
